--- a/club-finder/src/App.css
+++ b/club-finder/src/App.css
@@ -32,6 +32,7 @@
   text-decoration: none;
   color: rgb(0, 0, 0);
   font-size: 1.2rem;
+  font-weight: bold;
   transition: color 0.3s ease, transform 0.3s ease;
 }
 
