--- a/club-finder/src/style/MainPage.css
+++ b/club-finder/src/style/MainPage.css
@@ -14,6 +14,10 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+.welcome {
+  font-family: "Doto" ,sans-serif;
+}
+
 .quiz-section h2 {
   color: #4caf50;
   font-size: 1.5rem;
