--- a/club-finder/src/style/TitleBar.css
+++ b/club-finder/src/style/TitleBar.css
@@ -1,32 +1,38 @@
 .title-bar {
     position: sticky; /* Makes the bar sticky */
     top: 0; /* Sticks to the top of the viewport */
-    background-color: #fdd700;
+    background-color: #ffb413;
     color: white;
     padding: 10px 20px;
     text-align: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 1000; /* Ensures it stays on top */
+    margin-top: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
+    font-family: 'Doto', Courier, monospace;
+    border-radius: 0.5cm;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
-  
+
   .title-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: black;
+    color: #1D1F91;
   }
   
   
   .logo {
-    width: 50px; 
-    height: 50px; 
+    width: 70px; 
+    height: 70px; 
     margin-right: 15px; 
   }
   
   .title-bar h1 {
     margin: 0;
     font-size: 2rem;
-    font-family: "Arial", sans-serif;
+    font-family: 'EB Garamond', Arial, sans-serif;
     transition: color 0.3s ease; /* For hover effect */
   }
   
