--- a/club-finder/src/App.css
+++ b/club-finder/src/App.css
@@ -12,9 +12,9 @@
   z-index: 1000;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-top: 15px;
-  margin-left: 1%;
+  /*margin-left: 1%;
   margin-right: 1%;
-  border-radius: 0.5cm;
+  border-radius: 0.5cm; */
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
