--- a/club-finder/src/style/TitleBar.css
+++ b/club-finder/src/style/TitleBar.css
@@ -1,6 +1,4 @@
 .title-bar {
-    position: sticky; /* Makes the bar sticky */
-    top: 0; /* Sticks to the top of the viewport */
     background-color: #ffb413;
     color: white;
     padding: 10px 20px;
@@ -11,6 +9,7 @@
     margin-left: 1%;
     margin-right: 1%;
     border-radius: 0.5cm; */
+    text-decoration: none;
   }
 
   .title-container {
@@ -32,6 +31,7 @@
     font-size: 2rem;
     font-family: 'EB Garamond', Arial, sans-serif;
     transition: color 0.3s ease; /* For hover effect */
+    text-decoration: none;
   }
   
   /* Hover effect for the title */
