--- a/club-finder/src/style/Footer.css
+++ b/club-finder/src/style/Footer.css
@@ -3,7 +3,7 @@
     color: white;
     text-align: center;
     padding: 15px;
-    position: relative;
+    position: fixed;
     bottom: 0;
     width: 100%;
   }
