--- a/club-finder/src/style/TitleBar.css
+++ b/club-finder/src/style/TitleBar.css
@@ -5,10 +5,12 @@
     text-align: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 1000; /* Ensures it stays on top */
-    /*margin-top: 1%;
+    /*margin-top: 1%; 
+    border-radius: 0.5cm;
+    */
     margin-left: 1%;
     margin-right: 1%;
-    border-radius: 0.5cm; */
+    
   }
 
   .title-container {
