--- a/club-finder/src/style/ClubListPage.css
+++ b/club-finder/src/style/ClubListPage.css
@@ -3,6 +3,10 @@
   margin-top: 50px;
 }
 
+.club-list-page-left {
+  text-align: left;
+}
+
 .club-list-page h1 {
   font-size: 2.5rem;
   color: #9C27B0;
