--- a/club-finder/src/style/Accordion.css
+++ b/club-finder/src/style/Accordion.css
@@ -9,10 +9,14 @@
 }
 
 .accordion-content {
-    padding: 10px;
+    padding: 0 10px;
     background-color: #f9f9f9;
     border: 1px solid #ddd;
     border-radius: 4px;
+}
+
+.accordion-content.open {
+    max-height: 1000px;
 }
 
 .accordion-header:hover {
