--- a/club-finder/src/style/QuizQuestions.css
+++ b/club-finder/src/style/QuizQuestions.css
@@ -55,3 +55,22 @@
     border: 1px solid;
     border-radius: 4px;
 }
+
+.next-button {
+    background-color: #000000; /* Green */
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.2s;
+    cursor: pointer;
+  }
+
+.next-button:hover {
+    background-color: #494747;
+    color: white;
+}
