--- a/club-finder/src/style/ClubListPage.css
+++ b/club-finder/src/style/ClubListPage.css
@@ -12,6 +12,16 @@
   color: #9C27B0;
 }
 
+.filtered-list-page {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.filtered-list-page h1 {
+  font-size: 2.5rem;
+  color: #2196F3;
+}
+
 .club-list {
   list-style: none;
   padding: 0;
